RESOLVED FIXED24094
Cleanup leak messages on exit
https://bugs.webkit.org/show_bug.cgi?id=24094
Summary Cleanup leak messages on exit
Adam Treat
Reported 2009-02-23 07:37:36 PST
Right now with the Qt port, WebCore::CachedResource is being leaked on exit. This happens for every webpage that has a cached resource. But that is ok, because WebCore::Cache itself is *designed* to be leaked on exit as it is a singleton. However, WebCore::CachedResource has a RefCountedLeakMessage that prints on exit. After consulting with Antti it was determined that the best thing the Qt port could do in this instance is match the Mac ports behavior. This patch clears the cache on exit only in Debug builds in the same manner that the Mac port does.
Attachments
Clean up leak messages (2.75 KB, patch)
2009-02-23 07:38 PST, Adam Treat
darin: review+
Adam Treat
Comment 1 2009-02-23 07:38:14 PST
Created attachment 27880 [details] Clean up leak messages
Darin Adler
Comment 2 2009-02-23 10:53:47 PST
Comment on attachment 27880 [details] Clean up leak messages Looks good. r=me
Adam Treat
Comment 3 2009-02-23 11:53:13 PST
Landed with r41151.
Note You need to log in before you can comment on or make changes to this bug.