2009-02-23  Adam Treat  <adam.treat@torchmobile.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=24094
        Make sure to empty the cache on exit to get rid of superfluous leak messages
        for CachedResource's in order to keep the leak messages accurate.  This
        is analagous to what the Mac port is doing on application exit when all
        WebView's have been closed.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::_q_cleanupLeakMessages):
        (QWebPage::QWebPage):
        * Api/qwebpage.h:
        * Api/qwebpage_p.h:

Canonical link: https://commits.webkit.org/33233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41151 268f45cc-cd09-0410-ab3c-d52691b4dbfc