WebKit/qt/Api/qwebpage.h
@@ -325,6 +325,9 @@ protected:
 private:
     Q_PRIVATE_SLOT(d, void _q_onLoadProgressChanged(int))
     Q_PRIVATE_SLOT(d, void _q_webActionTriggered(bool checked))
+#ifndef NDEBUG
+    Q_PRIVATE_SLOT(d, void _q_cleanupLeakMessages())
+#endif
     QWebPagePrivate *d;
 
     friend class QWebFrame;
