WebKit/qt/Api/qwebpage_p.h
@@ -79,6 +79,9 @@ public:
 
     void _q_onLoadProgressChanged(int);
     void _q_webActionTriggered(bool checked);
+#ifndef NDEBUG
+    void _q_cleanupLeakMessages();
+#endif
     void updateAction(QWebPage::WebAction action);
     void updateNavigationActions();
     void updateEditorActions();
